--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Базовые настройки
-APP_NAME=KinoVzor
+PROJECT_NAME=KinoVzor
+APP_NAME=KinoVzor API
 APP_VERSION=1.0.0
 DEBUG=True
 SECRET_KEY=your-super-secret-key-change-this
@@ -7,12 +8,14 @@ SECRET_KEY=your-super-secret-key-change-this
 # База данных
 DATABASE_URL=sqlite:///movies.db
 
+SQLALCHEMY_DATABASE_URL = "postgresql+asyncpg://user:password@localhost/dbname"
 # API
 API_V1_PREFIX=/api/v1
 
 # CORS и хосты
 ALLOWED_HOSTS=localhost,127.0.0.1
 CORS_ORIGINS=http://localhost:3000,http://localhost:8000,http://127.0.0.1:3000,http://127.0.0.1:8000
+FRONTEND_URL=http://localhost:3000
 
 # Пользователи
 DEFAULT_ADMIN_ID=1
@@ -27,7 +30,7 @@ DEFAULT_CREATED_BY_USER_ID=1
 
 # Логирование
 LOG_LEVEL=INFO
-LOG_FILE=server.log
+LOG_FILE=app.log
 
 # Аутентификация
 ACCESS_TOKEN_EXPIRE_MINUTES=30
