--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ APP_NAME=KinoVzor API
 APP_VERSION=1.0.0
 DEBUG=True
 SECRET_KEY=your-super-secret-key-change-this
+JWT_SECRET_KEY=your-secret-key-change-in-production
 
 # База данных
 DATABASE_URL=sqlite:///movies.db
@@ -14,7 +15,6 @@ API_V1_PREFIX=/api/v1
 
 # CORS и хосты
 ALLOWED_HOSTS=localhost,127.0.0.1
-CORS_ORIGINS=http://localhost:3000,http://localhost:8000,http://127.0.0.1:3000,http://127.0.0.1:8000
 FRONTEND_URL=http://localhost:3000
 
 # Пользователи
